# MongoDB-MCP

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
client/: ollama_client.py
config/: audit_logger.py  settings.py
mcp_server/: server.py
rag/: engine.py
tests/: test_server.py
tui/: app.py  widgets.py
