[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongodb-mcp-controller"
version = "0.3.0"
description = "MongoDB MCP Controller + Event Forecasting Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "motor>=3.7.1",
    "pymongo>=4.16.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # Forecasting
    "prophet>=1.1.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Reporting
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
mongodb-mcp = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
